[project]
name = "pythonplayground"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "avis001", email = "k.sivavel@gmail.com" }
]
dependencies = [
    "cowsay>=6.1",
    "pypdf2>=3.0.1",
    "pikepdf>=9.8.1",
    "tqdm>=4.67.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/pythonplayground"]
